# ChatApplication

./: .gitignore  CMakeLists.txt  README.md
include/common/: Buffer.h  BufferStream.h  Log.h  StreamReader.h  StreamWriter.h  common_test.h  log.h
src/client/: CMakeLists.txt  ChatAppClient.cpp  client_test.cpp
src/common/: BufferStream.cpp  CMakeLists.txt  Log.cpp  StreamReader.cpp  StreamWriter.cpp  common_test.cpp  log.cpp
src/server/: CMakeLists.txt  server_test.cpp
